--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 h1 {
-  color:blue;
+  color:#ffcb00;
   font-family: Times;
   }
 h2 {
-  color:darkseagreen;
+  color:#000ff;
   font-family: Arial;
   }
