--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 h1 {
   color:#ffcb00;
-  font-family: "Courier New";
+  font-family: "Courier New", Times;
   }
 h2 {
   color:#0000ff;
-  font-family: cursive;
+  font-family: cursive, Times;
   }
