--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 h1 {
   color:#ffcb00;
   font-family: "Courier New", Times;
+  text-align: center;
   }
 h2 {
   color:#0000ff;
   font-family: cursive, Times;
+  text-align: center;
   }
 
  body {
