--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 h1 {
+  border: outset 20px #cc00aa;
   color:#ffcb00;
   font-family: "Courier New", Times;
   text-align: center;
   background: #BBBBBB;
   }
 h2 {
+  border: dotted 40px;
   color:#0000ff;
   font-family: cursive, Times;
   text-align: center;
@@ -13,15 +15,19 @@ h2 {
   }
 
   header{
+    border: solid;
   	background: #BBBBBB;
   }
 
  body {
+  border: groove;
   background-color:#d4ffeda8;
   font-size: 125%;
+  margin: 0 auto;
  }
 
  p {
+  border: solid;
  	font-style: oblique;
 
  }
